airbyte/airbyte-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: airbyte-webapp
  namespace: airbyte
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "airbyte.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: airbyte-airbyte-webapp-svc
      port: 80
